# GymApp

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
backend/: requirements.txt
backend/accounts/: models.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: _layout.tsx  login.tsx  register.tsx
frontend/app/(tabs)/: index.tsx
frontend/styles/: authStyles.ts
