[project]
name = "gymapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.1",
    "django==5.2.13",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "pyjwt==2.12.1",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
]
